// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Search Field/Menu (Private) Default 1`] = `
.c7 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c8 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c8:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c8:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c8 > div {
  padding: 14px;
}

.c8 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c8 > div:hover {
  outline: none;
}

.c6 {
  margin: -6px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > input {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Apple
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Banana
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Pear
          </div>
        </div>
      </li>
      <li
        className="c8"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) footer only 1`] = `
.c7 {
  display: inline-block;
}

.c7 .hitWrapper {
  position: relative;
}

.c7 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c8 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c8 > i.margin-left {
  margin-left: 8px;
}

.c8 > i.margin-right {
  margin-right: 8px;
}

.c8 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 > a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 > a {
  color: inherit;
}

.c8:hover {
  color: #3498db;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 8px;
  background: #f6f8f9;
}

.c4 .icon {
  width: 24px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 8px;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 12px;
  font-size: 12px;
}

.c4 .link {
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="icon c5"
            size={18}
            type="#2f313a"
          >
            <i
              className="wg-question"
            />
          </div>
          <div
            className="c6"
            size={14}
            type="#2f313a"
          >
            Can’t find a farmers market?
            <div
              className="c5"
              size={18}
              type="#2f313a"
            >
              <div
                className="c7"
              >
                <div
                  className="hitWrapper"
                >
                  <div
                    className="c8"
                    disabled={false}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    size={16}
                    type="#59636f"
                  >
                    <span
                      className="link"
                    >
                      Contact Support?
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) onItemClick 1`] = `
.c7 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c8 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c8:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c8:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c8 > div {
  padding: 14px;
}

.c8 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c8 > div:hover {
  outline: none;
}

.c6 {
  margin: -6px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > input {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Apple
          </div>
        </div>
      </li>
      <li
        className="c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Banana
          </div>
        </div>
      </li>
      <li
        className="c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Pear
          </div>
        </div>
      </li>
      <li
        className="c8"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) onMenuMouseDown 1`] = `
.c7 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: pointer;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c8 {
  cursor: auto;
  overflow: hidden;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c8:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c8:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c8 > div {
  padding: 14px;
}

.c8 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c8 > div:hover {
  outline: none;
}

.c6 {
  margin: -6px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > input {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseDown={[Function]}
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Apple
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Banana
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Pear
          </div>
        </div>
      </li>
      <li
        className="c8"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) with empty items 1`] = `
.c0 {
  width: 400px;
}

<div
  className="c0"
/>
`;
